# image_viewer

./: .gitignore  Cargo.toml  README.md  dev.sh
.cargo/: config.toml
.github/: copilot-instructions.md
src/: main.rs
src/core/: file_scanner.rs  image_loader.rs  mod.rs  thumbnail_cache.rs
src/ui/: app.rs  image_viewer.rs  mod.rs  thumbnail_grid.rs  tree_view.rs
src/ui/app/: async_ops.rs  state.rs  viewer_ops.rs
src/ui/thumbnail_grid/: loading.rs
src/utils/: keyboard.rs  mod.rs  network_path.rs
