[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
image = { version = "0.25", features = ["jpeg", "png", "bmp", "gif", "webp"] }
walkdir = "2.5"
anyhow = "1.0"
rfd = "0.15"
natord = "1.0"

[features]
default = []
